--- a/src/app/pages/calendario/calendario.component.css
+++ b/src/app/pages/calendario/calendario.component.css
@@ -32,8 +32,6 @@
 /* Contenido */
 .calendario-actividades {
     margin-bottom: 100px;
-/*     margin-left: auto;
-    margin-right: auto; */
 }
 
 .titulo-calendario {
@@ -57,6 +55,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .banderas p {
@@ -93,11 +92,13 @@ a {
     background-color: #E9122D;
     color: white;
     text-align: center;
-    font-size: 27px;
+    font-size: 25px;
     padding-left: 20px;
     padding-right: 20px;
     display: block;
-    width: 500px;
+    width: 600px;
+    height: 70px;
+    line-height: 70px;
     border-radius: 100px;
     margin-top: 25px;
     margin-bottom: 25px;
@@ -107,15 +108,15 @@ a {
     font-size: 30px;
     font-weight: bold;
     text-align: center;
-    width: 800px;
+    width: 700px;
 }
 
 .tarjeta-calendario .descripcion {
     font-size: 20px;
     text-align: justify;
     float: left;
-    width: 55%;
-    margin: 20px;
+    width: 50%;
+    margin-left: 50px;
 }
 
 .info-persona {
@@ -145,4 +146,120 @@ a {
     width: 70px;
     margin: 0px 5px 5px;
     transform: translateY(-20px);
+}
+
+/* - Responsivo - */
+@media screen and (max-width:1300px) {
+    .carrusel {
+        margin-top: 85px;
+    }
+
+    .texto-carrusel {
+        font-size: 30px;
+        ;
+    }
+
+    .titulo-calendario {
+        font-size: 80px;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    .titulo-calendario {
+        font-size: 50px;
+    }
+
+    .tarjeta-calendario {
+        width: 500px;
+        margin: 50px;
+    }
+
+    .tarjeta-calendario .compara-link {
+        width: 400px;
+        font-size: medium;
+    }
+
+    .tarjeta-calendario .compara-text {
+        font-size: 20px;
+        font-weight: bold;
+        width: 400px;
+    }
+
+    .tarjeta-calendario .descripcion {
+        font-size: 15px;
+        margin-left: 40px;
+    }
+
+    .tarjeta-calendario .foto {
+        width: 100px;
+    }
+
+    .tarjeta-calendario .nombre {
+        width: 150px;
+        font-size: small;
+    }
+
+    .contact-icons img {
+        width: 30px;
+        transform: translateY(-30px);
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .texto-carrusel {
+        font-size: 20px;
+    }
+
+    .tarjeta-calendario .fecha {
+        font-size: 20px;
+    }
+
+    .calendario-actividades .bandera {
+        width: 50px;
+    }
+
+    .titulo-calendario {
+        font-size: 50px;
+    }
+
+    .tarjeta-calendario {
+        width: 350px;
+        margin-bottom: 50px;
+    }
+
+    .tarjeta-calendario .compara-link {
+        width: 300px;
+        height: auto;
+        padding: 0;
+        font-size: smaller;
+    }
+
+    .tarjeta-calendario .compara-text {
+        font-size: 20px;
+        font-weight: 600;
+        width: 300px;
+    }
+
+    .tarjeta-calendario .descripcion {
+        font-size: 15px;
+        width: 80%;
+    }
+
+    .info-persona {
+        width: 100%;
+    }
+
+    .tarjeta-calendario .foto {
+        width: 100px;
+    }
+
+    .tarjeta-calendario .nombre {
+        width: 150px;
+        font-size: small;
+    }
+
+    .contact-icons img {
+        width: 30px;
+        transform: translateY(-30px);
+    }
 }
