--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -4,7 +4,6 @@
     display: flex;
     margin: 0;
     padding: 0;
-    bottom: 0;
     height: 50px;
     width: 100%;
     text-align: right;
@@ -36,4 +35,11 @@
 
 .navbar-footer a:hover {
     color: rgb(197, 197, 197);
+}
+
+@media screen and (max-width: 500px) {
+ 
+    .btn-contact {
+        width: 100px;
+    }
 }
