--- a/src/app/pages/sobre-educa/sobre-educa.component.css
+++ b/src/app/pages/sobre-educa/sobre-educa.component.css
@@ -13,6 +13,7 @@
     margin-bottom: 30px;
     justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .sec-1 p {
@@ -52,4 +53,45 @@
     margin: auto;
     margin-top: 20px;
     margin-bottom: 20px;
+}
+
+@media screen and (max-width: 750px) {
+    .proposito-text {
+        font-size: 30px;
+    }
+
+    .sec-1 img {
+        width: 250px;
+    }
+
+    .sec-1 p {
+        width: 20%;
+        text-align: center;
+        font-size: smaller;
+    }
+    .sec-2 .card p {
+        font-size: x-small;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .proposito-text {
+        font-size: 20px;
+        height: 50px;
+        line-height: 50px;
+    }
+
+    .sec-1 p {
+        width: 100%;
+        text-align: center;
+        font-size: smaller;
+    }
+
+    .sec-2 .card p {
+        font-size: x-small;
+    }
+
+    .sec-2 .card {
+        width: 80%;
+    }
 }
