seccion conocenos agregada

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,26 +1,26 @@
 <footer>
-    <ul class="navbar-footer">
+    <section class="navbar-footer">
         <a class="btn-contact" href="">
             <img src="assets/vsg/12.svg" alt="">
             ¡Hola!
         </a>
-    
+
         <a href="">
             <img class="img-footer" src="assets/img/imageFooter.png" alt="">
         </a>
-        
+
         <div>
             <a href="https://www.facebook.com/unesco" target="_blank">
-                <svg width="30" height="30" viewBox="0 0 73 72" style="margin-bottom: 5px;" fill="none"
+                <svg width="30" height="30" viewBox="0 0 73 72" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M72.3756 36.1878C72.3756 16.1963 56.1657 0 36.1878 0C16.1963 0 0 16.1963 0 36.1878C0 54.2455 13.2289 69.2182 30.5335 71.93V46.6506H21.344V36.1901H30.5335V28.2129C30.5335 19.1456 35.9277 14.1381 44.1966 14.1381C48.1569 14.1381 52.3027 14.8438 52.3027 14.8438V23.7482H47.7317C43.2444 23.7482 41.8421 26.5415 41.8421 29.4026V36.1878H51.8775L50.2648 46.6483H41.8421V71.9278C59.1331 69.2159 72.3756 54.2432 72.3756 36.1855V36.1878Z"
                         fill="white" />
                 </svg>
-        
+
             </a>
             <a href="https://twitter.com/UNESCO" target="_blank">
-                <svg width="30" height="30" viewBox="0 0 73 73" style="margin-bottom: 5px;" fill="none"
+                <svg width="30" height="30" viewBox="0 0 73 73" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M36.1878 0C16.2037 0 0 16.2037 0 36.1878C0 56.1719 16.2037 72.3756 36.1878 72.3756C56.1719 72.3756 72.3756 56.1719 72.3756 36.1878C72.3756 16.2037 56.1719 0 36.1878 0ZM53.5789 27.2782C53.6032 27.6578 53.6032 28.0536 53.6032 28.4413C53.6032 40.2993 44.5724 53.9586 28.0698 53.9586C22.9809 53.9586 18.2635 52.4804 14.2893 49.9359C15.0163 50.0167 15.711 50.049 16.4541 50.049C20.6545 50.049 24.5156 48.6273 27.5932 46.2202C23.6513 46.1394 20.3395 43.5546 19.2086 40.0004C20.5899 40.2024 21.8338 40.2024 23.2555 39.8389C21.2258 39.4265 19.4015 38.3242 18.0924 36.7192C16.7834 35.1141 16.0703 33.1054 16.0745 31.0343V30.9212C17.2619 31.5916 18.6593 32.0036 20.1214 32.0601C18.8923 31.241 17.8843 30.1313 17.1869 28.8293C16.4894 27.5274 16.124 26.0734 16.123 24.5964C16.123 22.9243 16.5591 21.3976 17.3427 20.0729C19.5955 22.8463 22.4068 25.1145 25.5937 26.7302C28.7806 28.3459 32.2718 29.273 35.8405 29.451C34.5723 23.3524 39.1281 18.417 44.6047 18.417C47.1895 18.417 49.5159 19.4994 51.1556 21.2442C53.1831 20.8645 55.1218 20.1052 56.8504 19.0874C56.1799 21.1634 54.7744 22.9162 52.9085 24.0229C54.7179 23.829 56.4627 23.3282 58.0782 22.6254C56.8585 24.4187 55.3318 26.01 53.5789 27.2782V27.2782Z"
@@ -28,5 +28,5 @@
                 </svg>
             </a>
         </div>
-    </ul>
+    </section>
 </footer>
