--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -37,8 +37,12 @@
     color: rgb(197, 197, 197);
 }
 
+svg{
+  margin-bottom: 5px;
+}
+
 @media screen and (max-width: 500px) {
- 
+
     .btn-contact {
         width: 100px;
     }
