--- a/src/app/pages/calendario/calendario.component.html
+++ b/src/app/pages/calendario/calendario.component.html
@@ -1,95 +1,93 @@
 <app-navbar></app-navbar>
 
 <div class="carrusel">
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <div class="carrusel-content">
-                    <img src="assets/img/image1carrusel.png" class="d-block w-100" alt="...">
-                    <h2 class="texto-carrusel">Conoce las próximas actividades</h2>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="carrusel-content">
-                    <img src="assets/img/image1carrusel.png" class="d-block w-100" alt="...">
-                    <h2 class="texto-carrusel">Conoce las próximas actividades</h2>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="carrusel-content">
-                    <img src="assets/img/image1carrusel.png" class="d-block w-100" alt="...">
-                    <h2 class="texto-carrusel">Conoce las próximas actividades</h2>
-                </div>
-            </div>
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="carrusel-content">
+          <img src="assets/calendario/carrusel.webp" class="d-block w-100" alt="...">
+          <h2 class="texto-carrusel">Conoce las próximas actividades</h2>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+      </div>
+      <div class="carousel-item">
+        <div class="carrusel-content">
+          <img src="assets/calendario/carrusel.webp" class="d-block w-100" alt="...">
+          <h2 class="texto-carrusel">Conoce las próximas actividades</h2>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="carrusel-content">
+          <img src="assets/calendario/carrusel.webp" class="d-block w-100" alt="...">
+          <h2 class="texto-carrusel">Conoce las próximas actividades</h2>
+        </div>
+      </div>
     </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 </div>
 
 <div class="div-card">
-    <div class=" calendario-actividades">
-        <h1 class="titulo-calendario">Calendario de Actividades</h1>
-        <div class="tarjetas">
+  <div class=" calendario-actividades">
+    <h1 class="titulo-calendario">Calendario de Actividades</h1>
+    <div class="tarjetas">
 
-            <div class="tarjeta-calendario" *ngFor="let exp of expositores">
-                <p class="fecha">{{exp.fecha}}</p>
+      <div class="tarjeta-calendario" *ngFor="let exp of expositores">
+        <p class="fecha">{{exp.fecha}}</p>
 
-                <div class="banderas">
-                    <div>
-                        <img class="bandera" src="assets/img/18.png" alt="">
-                        <P>Monterrey 10:00 a.m.</P>
-                    </div>
-                    <div>
-                        <img class="bandera" src="assets/img/19.png" alt="">
-                        <P>Perth 11:00 p.m.</P>
-                    </div>
-                    <div>
-                        <img class="bandera" src="assets/img/20.png" alt="">
-                        <P>Alberta 9:00 a.m.</P>
-                    </div>
-                    <div>
-                        <img class="bandera" src="assets/img/21.png" alt="">
-                        <P>Salamanca 5:00 p.m.</P>
-                    </div>
-                    <div>
-                        <img class="bandera" src="assets/img/22.png" alt="">
-                        <P>Paris 5:00 p.m.</P>
-                    </div>
-                </div>
-
-                <a class="compara-link" href="">Compara el horario con el de tu región aqui.</a>
-                <p class="compara-text">{{exp.oracion}}</p>
-                <div>
-                    <div>
-                        <p class="descripcion">
-                            {{exp.descripcion}}
-                        </p>
-                    </div>
-                    <div class="info-persona">
-                        <img class="foto" src={{exp.imagen}} alt="">
-                        <p class="nombre">{{exp.nombre}}</p>
-                        <div class="contact-icons">
-                            <a href="">
-                                <img src="assets/img/16.png" alt="">
-                            </a>
-                            <a href="">
-                                <img src="assets/img/17.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
+        <div class="banderas">
+          <div>
+            <img class="bandera" src="assets/calendario/bandera1.png" alt="">
+            <P>Monterrey 10:00 a.m.</P>
+          </div>
+          <div>
+            <img class="bandera" src="assets/calendario/bandera2.png" alt="">
+            <P>Perth 11:00 p.m.</P>
+          </div>
+          <div>
+            <img class="bandera" src="assets/calendario/bandera3.png" alt="">
+            <P>Alberta 9:00 a.m.</P>
+          </div>
+          <div>
+            <img class="bandera" src="assets/calendario/bandera4.png" alt="">
+            <P>Salamanca 5:00 p.m.</P>
+          </div>
+          <div>
+            <img class="bandera" src="assets/calendario/bandera5.png" alt="">
+            <P>Paris 5:00 p.m.</P>
+          </div>
         </div>
 
+        <a class="compara-link" routerLink="/">Compara el horario con el de tu región aqui.</a>
+        <p class="compara-text">{{exp.oracion}}</p>
+        <div>
+          <div>
+            <p class="descripcion">
+              {{exp.descripcion}}
+            </p>
+          </div>
+          <div class="info-persona">
+            <img class="foto" src={{exp.imagen}} alt="">
+            <p class="nombre">{{exp.nombre}}</p>
+            <div class="contact-icons">
+              <a routerLink="/">
+                <img src="assets/svg/mail.svg" alt="email">
+              </a>
+              <a routerLink="/">
+                <img src="assets/svg/web.svg" alt="web">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
-    <app-footer></app-footer>
+
+  </div>
+  <app-footer></app-footer>
