--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,59 +1,59 @@
 <app-navbar></app-navbar>
 <section class="div-project">
-    <div class="search-project">
+  <div class="search-project">
 
-        <div class="label-title-project">
-            <label for="">Encuentra tu proyecto</label>
-        </div>
-
-        <form action="">
-
-            <label class="label-input" for="">Por tema</label>
-            <div class="input-content">
-                <input type="text" placeholder="Escribe aqui...">
-                <a class="input-icon" href="" target="">
-                    <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="15" cy="15" r="15" fill="#DBDCDC" />
-                        <path
-                            d="M24.5729 23.0938L21.0312 19.5625C22.1739 18.1067 22.7939 16.309 22.7916 14.4583C22.7916 12.8102 22.3029 11.199 21.3872 9.82859C20.4715 8.45818 19.17 7.39007 17.6473 6.75934C16.1246 6.12861 14.449 5.96358 12.8325 6.28513C11.216 6.60667 9.73116 7.40034 8.56572 8.56578C7.40028 9.73122 6.60661 11.2161 6.28507 12.8326C5.96352 14.4491 6.12855 16.1246 6.75928 17.6474C7.39001 19.1701 8.45811 20.4716 9.82852 21.3873C11.1989 22.3029 12.8101 22.7917 14.4583 22.7917C16.309 22.794 18.1067 22.1739 19.5624 21.0313L23.0937 24.5729C23.1905 24.6706 23.3057 24.7481 23.4327 24.8009C23.5596 24.8538 23.6958 24.881 23.8333 24.881C23.9708 24.881 24.1069 24.8538 24.2339 24.8009C24.3608 24.7481 24.476 24.6706 24.5729 24.5729C24.6705 24.4761 24.748 24.3609 24.8009 24.2339C24.8538 24.107 24.881 23.9709 24.881 23.8333C24.881 23.6958 24.8538 23.5597 24.8009 23.4327C24.748 23.3058 24.6705 23.1906 24.5729 23.0938V23.0938ZM8.20828 14.4583C8.20828 13.2222 8.57483 12.0138 9.26159 10.986C9.94835 9.95822 10.9245 9.15714 12.0665 8.68409C13.2085 8.21104 14.4652 8.08727 15.6776 8.32843C16.89 8.56959 18.0036 9.16484 18.8777 10.0389C19.7518 10.913 20.347 12.0266 20.5882 13.239C20.8293 14.4514 20.7056 15.7081 20.2325 16.8501C19.7595 17.9921 18.9584 18.9683 17.9306 19.655C16.9028 20.3418 15.6944 20.7083 14.4583 20.7083C12.8007 20.7083 11.211 20.0499 10.0389 18.8778C8.86676 17.7057 8.20828 16.1159 8.20828 14.4583Z"
-                            fill="#3A6B80" />
-                    </svg>
-                </a>
-            </div>
-
-            <label class="label-input" for="">Por título</label>
-            <div class="input-content">
-                <input type="text" placeholder="Escribe aqui...">
-                <a class="input-icon" href="" target="">
-                    <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="15" cy="15" r="15" fill="#DBDCDC" />
-                        <path
-                            d="M24.5729 23.0938L21.0312 19.5625C22.1739 18.1067 22.7939 16.309 22.7916 14.4583C22.7916 12.8102 22.3029 11.199 21.3872 9.82859C20.4715 8.45818 19.17 7.39007 17.6473 6.75934C16.1246 6.12861 14.449 5.96358 12.8325 6.28513C11.216 6.60667 9.73116 7.40034 8.56572 8.56578C7.40028 9.73122 6.60661 11.2161 6.28507 12.8326C5.96352 14.4491 6.12855 16.1246 6.75928 17.6474C7.39001 19.1701 8.45811 20.4716 9.82852 21.3873C11.1989 22.3029 12.8101 22.7917 14.4583 22.7917C16.309 22.794 18.1067 22.1739 19.5624 21.0313L23.0937 24.5729C23.1905 24.6706 23.3057 24.7481 23.4327 24.8009C23.5596 24.8538 23.6958 24.881 23.8333 24.881C23.9708 24.881 24.1069 24.8538 24.2339 24.8009C24.3608 24.7481 24.476 24.6706 24.5729 24.5729C24.6705 24.4761 24.748 24.3609 24.8009 24.2339C24.8538 24.107 24.881 23.9709 24.881 23.8333C24.881 23.6958 24.8538 23.5597 24.8009 23.4327C24.748 23.3058 24.6705 23.1906 24.5729 23.0938V23.0938ZM8.20828 14.4583C8.20828 13.2222 8.57483 12.0138 9.26159 10.986C9.94835 9.95822 10.9245 9.15714 12.0665 8.68409C13.2085 8.21104 14.4652 8.08727 15.6776 8.32843C16.89 8.56959 18.0036 9.16484 18.8777 10.0389C19.7518 10.913 20.347 12.0266 20.5882 13.239C20.8293 14.4514 20.7056 15.7081 20.2325 16.8501C19.7595 17.9921 18.9584 18.9683 17.9306 19.655C16.9028 20.3418 15.6944 20.7083 14.4583 20.7083C12.8007 20.7083 11.211 20.0499 10.0389 18.8778C8.86676 17.7057 8.20828 16.1159 8.20828 14.4583Z"
-                            fill="#3A6B80" />
-                    </svg>
-                </a>
-            </div>
-
-            <!-- Switches -->
-            <div class="switch-content">
-                <div class="switch1">
-                    <label class="label-switch" for="">Online</label>
-                    <label class="switch">
-                        <input type="checkbox">
-                        <span class="slider"></span>
-                    </label>
-                </div>
-                <div class="switch1">
-                    <label class="label-switch" for="">Cerca de tí</label>
-                    <label class=" switch">
-                        <input type="checkbox">
-                        <span class="slider"></span>
-                    </label>
-                </div>
-            </div>
-
-        </form>
+    <div class="label-title-project">
+      <label for="">Encuentra tu proyecto</label>
     </div>
+
+    <form action="">
+
+      <label class="label-input" for="">Por tema</label>
+      <div class="input-content">
+        <input type="text" placeholder="Escribe aqui...">
+        <a class="input-icon" href="" target="">
+          <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="15" cy="15" r="15" fill="#DBDCDC" />
+            <path
+              d="M24.5729 23.0938L21.0312 19.5625C22.1739 18.1067 22.7939 16.309 22.7916 14.4583C22.7916 12.8102 22.3029 11.199 21.3872 9.82859C20.4715 8.45818 19.17 7.39007 17.6473 6.75934C16.1246 6.12861 14.449 5.96358 12.8325 6.28513C11.216 6.60667 9.73116 7.40034 8.56572 8.56578C7.40028 9.73122 6.60661 11.2161 6.28507 12.8326C5.96352 14.4491 6.12855 16.1246 6.75928 17.6474C7.39001 19.1701 8.45811 20.4716 9.82852 21.3873C11.1989 22.3029 12.8101 22.7917 14.4583 22.7917C16.309 22.794 18.1067 22.1739 19.5624 21.0313L23.0937 24.5729C23.1905 24.6706 23.3057 24.7481 23.4327 24.8009C23.5596 24.8538 23.6958 24.881 23.8333 24.881C23.9708 24.881 24.1069 24.8538 24.2339 24.8009C24.3608 24.7481 24.476 24.6706 24.5729 24.5729C24.6705 24.4761 24.748 24.3609 24.8009 24.2339C24.8538 24.107 24.881 23.9709 24.881 23.8333C24.881 23.6958 24.8538 23.5597 24.8009 23.4327C24.748 23.3058 24.6705 23.1906 24.5729 23.0938V23.0938ZM8.20828 14.4583C8.20828 13.2222 8.57483 12.0138 9.26159 10.986C9.94835 9.95822 10.9245 9.15714 12.0665 8.68409C13.2085 8.21104 14.4652 8.08727 15.6776 8.32843C16.89 8.56959 18.0036 9.16484 18.8777 10.0389C19.7518 10.913 20.347 12.0266 20.5882 13.239C20.8293 14.4514 20.7056 15.7081 20.2325 16.8501C19.7595 17.9921 18.9584 18.9683 17.9306 19.655C16.9028 20.3418 15.6944 20.7083 14.4583 20.7083C12.8007 20.7083 11.211 20.0499 10.0389 18.8778C8.86676 17.7057 8.20828 16.1159 8.20828 14.4583Z"
+              fill="#3A6B80" />
+          </svg>
+        </a>
+      </div>
+
+      <label class="label-input" for="">Por título</label>
+      <div class="input-content">
+        <input type="text" placeholder="Escribe aqui...">
+        <a class="input-icon" href="" target="">
+          <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="15" cy="15" r="15" fill="#DBDCDC" />
+            <path
+              d="M24.5729 23.0938L21.0312 19.5625C22.1739 18.1067 22.7939 16.309 22.7916 14.4583C22.7916 12.8102 22.3029 11.199 21.3872 9.82859C20.4715 8.45818 19.17 7.39007 17.6473 6.75934C16.1246 6.12861 14.449 5.96358 12.8325 6.28513C11.216 6.60667 9.73116 7.40034 8.56572 8.56578C7.40028 9.73122 6.60661 11.2161 6.28507 12.8326C5.96352 14.4491 6.12855 16.1246 6.75928 17.6474C7.39001 19.1701 8.45811 20.4716 9.82852 21.3873C11.1989 22.3029 12.8101 22.7917 14.4583 22.7917C16.309 22.794 18.1067 22.1739 19.5624 21.0313L23.0937 24.5729C23.1905 24.6706 23.3057 24.7481 23.4327 24.8009C23.5596 24.8538 23.6958 24.881 23.8333 24.881C23.9708 24.881 24.1069 24.8538 24.2339 24.8009C24.3608 24.7481 24.476 24.6706 24.5729 24.5729C24.6705 24.4761 24.748 24.3609 24.8009 24.2339C24.8538 24.107 24.881 23.9709 24.881 23.8333C24.881 23.6958 24.8538 23.5597 24.8009 23.4327C24.748 23.3058 24.6705 23.1906 24.5729 23.0938V23.0938ZM8.20828 14.4583C8.20828 13.2222 8.57483 12.0138 9.26159 10.986C9.94835 9.95822 10.9245 9.15714 12.0665 8.68409C13.2085 8.21104 14.4652 8.08727 15.6776 8.32843C16.89 8.56959 18.0036 9.16484 18.8777 10.0389C19.7518 10.913 20.347 12.0266 20.5882 13.239C20.8293 14.4514 20.7056 15.7081 20.2325 16.8501C19.7595 17.9921 18.9584 18.9683 17.9306 19.655C16.9028 20.3418 15.6944 20.7083 14.4583 20.7083C12.8007 20.7083 11.211 20.0499 10.0389 18.8778C8.86676 17.7057 8.20828 16.1159 8.20828 14.4583Z"
+              fill="#3A6B80" />
+          </svg>
+        </a>
+      </div>
+
+      <!-- Switches -->
+      <div class="switch-content">
+        <div class="switch1">
+          <label class="label-switch" for="">Online</label>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider"></span>
+          </label>
+        </div>
+        <div class="switch1">
+          <label class="label-switch" for="">Cerca de tí</label>
+          <label class=" switch">
+            <input type="checkbox">
+            <span class="slider"></span>
+          </label>
+        </div>
+      </div>
+
+    </form>
+  </div>
 </section>
 
 <!-- Experiencia -->
@@ -61,88 +61,88 @@
         frameborder="0"></iframe> -->
 
 <div class="div-card-2">
-    <div class="card-2-seccion-1">
-        <div class="avances-img">
-            <a href="index.php">
-                <img src="assets\svg\3.svg" alt="">
-            </a>
-        </div>
-        <a style="text-decoration: none;" href="index.php">
-            <h1>Mis avances</h1>
-        </a>
-        <img style="padding-top: 20px; padding-bottom: 20px;" src="assets\svg\5.svg" alt="">
-        <div class="avances-img">
-            <a href="index.php">
-                <img width="200px" src="assets\svg\4.svg" alt="">
-            </a>
-        </div>
-        <a style="text-decoration: none;" href="index.php">
-            <h1>Foros de debate</h1>
-        </a>
+  <div class="card-2-seccion-1">
+    <div class="avances-img">
+      <a routerLink="/">
+        <img src="assets\svg\3.svg" alt="">
+      </a>
     </div>
-
-    <div class="card-2-seccion-2">
-        <div class="titulos">
-            <h1 class="recursos-label">Mis recursos</h1>
-            <img class="flecha" src="assets/svg/6.svg" alt="">
-        </div>
-        <div class="recursos-content">
-
-            <div>
-                <div class="recursos-img">
-                    <img src="assets/svg/7.svg" alt="">
-                </div>
-                <p>Libros digitales</p>
-            </div>
-            <div>
-                <div class="recursos-img">
-                    <img src="assets/svg/8.svg" alt="">
-                </div>
-                <p>Lecciones grabadas</p>
-            </div>
-            <div>
-                <div class="recursos-img">
-                    <img src="assets/svg/9.svg" alt="">
-                </div>
-                <p>Revistas cientificas</p>
-            </div>
-
-        </div>
+    <a routerLink="/">
+      <h1>Mis avances</h1>
+    </a>
+    <img class="barra-progreso" src="assets\svg\5.svg" alt="">
+    <div class="avances-img">
+      <a routerLink="/">
+        <img width="200px" src="assets\svg\4.svg" alt="">
+      </a>
     </div>
+    <a routerLink="/">
+      <h1>Foros de debate</h1>
+    </a>
+  </div>
+
+  <div class="card-2-seccion-2">
+    <div class="titulos">
+      <h1 class="recursos-label">Mis recursos</h1>
+      <img class="flecha" src="assets/svg/6.svg" alt="">
+    </div>
+    <div class="recursos-content">
+
+      <div>
+        <div class="recursos-img">
+          <img src="assets/svg/7.svg" alt="">
+        </div>
+        <p>Libros digitales</p>
+      </div>
+      <div>
+        <div class="recursos-img">
+          <img src="assets/svg/8.svg" alt="">
+        </div>
+        <p>Lecciones grabadas</p>
+      </div>
+      <div>
+        <div class="recursos-img">
+          <img src="assets/svg/9.svg" alt="">
+        </div>
+        <p>Revistas cientificas</p>
+      </div>
+
+    </div>
+  </div>
 
 </div>
 
 <div class="div-card-3">
-    <div class="titulos">
-        <img src="assets/svg/10.svg" alt="">
-        <h1 class="label-actividades">Próximas actividades</h1>
+  <div class="titulos">
+    <img src="assets/svg/10.svg" alt="">
+    <h1 class="label-actividades">Próximas actividades</h1>
+  </div>
+  <div>
+    <div class="actividades-content">
+
+      <div class="contenido-actividades">
+        <img src="assets/svg/11.svg" alt="">
+        <h2>Lección 2:</h2>
+        <p>"Los beneficios de la Ciencia Abierta"</p>
+        <a href="">Iniciar lección</a>
+      </div>
+
+      <div class="contenido-actividades">
+        <img src="assets/svg/11.svg" alt="">
+        <h2>Lección 3:</h2>
+        <p>"Buenas prácticas para publicación"</p>
+        <a href="">Iniciar lección</a>
+      </div>
+
+      <div class="contenido-actividades">
+        <img src="assets/svg/11.svg" alt="">
+        <h2>Lección 4:</h2>
+        <p>"Inclusion en la Ciencia"</p>
+        <a href="">Iniciar lección</a>
+      </div>
+
     </div>
-    <div>
-        <div class="actividades-content">
-
-            <div class="contenido-actividades">
-                <img src="assets/svg/11.svg" alt="">
-                <h2>Lección 2:</h2>
-                <p>"Los beneficios de la Ciencia Abierta"</p>
-                <a href="">Iniciar lección</a>
-            </div>
-
-            <div class="contenido-actividades">
-                <img src="assets/svg/11.svg" alt="">
-                <h2>Lección 3:</h2>
-                <p>"Buenas prácticas para publicación"</p>
-                <a href="">Iniciar lección</a>
-            </div>
-
-            <div class="contenido-actividades">
-                <img src="assets/svg/11.svg" alt="">
-                <h2>Lección 4:</h2>
-                <p>"Inclusion en la Ciencia"</p>
-                <a href="">Iniciar lección</a>
-            </div>
-
-        </div>
-    </div>
+  </div>
 </div>
 
 <app-footer></app-footer>
