--- a/src/app/pages/calendario/calendario.component.html
+++ b/src/app/pages/calendario/calendario.component.html
@@ -34,9 +34,9 @@
 </div>
 
 <div class="div-card">
-  <div class=" calendario-actividades">
+  <div class="calendario-actividades">
     <h1 class="titulo-calendario">Calendario de Actividades</h1>
-    <div class="tarjetas">
+    <section class="tarjetas">
 
       <div class="tarjeta-calendario" *ngFor="let exp of expositores">
         <p class="fecha">{{exp.fecha}}</p>
@@ -87,7 +87,7 @@
         </div>
       </div>
 
-    </div>
+    </section>
 
   </div>
   <app-footer></app-footer>
