--- a/src/app/pages/conocenos/conocenos.component.html
+++ b/src/app/pages/conocenos/conocenos.component.html
@@ -17,7 +17,7 @@
   <section class="tarjeta-investigador">
 
     <div class="col-5 investigadores" *ngFor="let investigador of investigadores">
-      <img class="investigador" src={{investigador.imagen}} alt="">
+      <img class="investigador-img" src={{investigador.imagen}} alt="">
       <div class="informacion">
         <h2>{{investigador.nombre}}</h2>
         <h3>Consejo Nacional de Investigadores</h3>
@@ -46,7 +46,7 @@
 
   <section>
     <div class="organizadores-logos">
-      <img src="assets/conocenos/scielo.webp" alt="scielo" width="200" height="200">
+      <img class="scielo-img" src="assets/conocenos/scielo.webp" alt="scielo" width="200" height="200">
       <img src="assets/conocenos/lyrasis.webp" alt="lyrasis" width="350">
       <img src="assets/conocenos/datacite.webp" alt="datacite" width="350">
       <img src="assets/conocenos/orcid.webp" alt="orcid" width="350">
