--- a/src/app/pages/calendario/calendario.component.css
+++ b/src/app/pages/calendario/calendario.component.css
@@ -1,266 +1,270 @@
 /*Pagina de calendario*/
 .carrusel {
-    margin-top: 100px;
-    border-bottom: #E9122D solid 20px;
+  margin-top: 100px;
+  border-bottom: #E9122D solid 20px;
 }
 
 .carrusel-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .carrusel img {
-    opacity: 0.7;
-    height: 350px;
-    z-index: -1;
+  opacity: 0.7;
+  height: 350px;
+  z-index: -1;
 }
 
 .texto-carrusel {
-    display: flex;
-    background-color: #DBAF1F;
-    font-size: 50px;
-    color: white;
-    width: 40%;
-    padding: 15px;
-    font-weight: bold;
-    text-align: center;
-    position: absolute;
-    text-shadow: 2px 2px #818181;
+  display: flex;
+  background-color: #DBAF1F;
+  font-size: 50px;
+  color: white;
+  width: 40%;
+  padding: 15px;
+  font-weight: bold;
+  text-align: center;
+  position: absolute;
+  text-shadow: 2px 2px #818181;
 }
 
 /* Contenido */
 .calendario-actividades {
-    margin-bottom: 100px;
+  margin-bottom: 100px;
 }
 
 .titulo-calendario {
-    color: #E9122D;
-    font-weight: bold;
-    text-align: center;
-    font-size: 100px;
-    margin-top: 70px;
-    margin-bottom: 50px;
+  color: #E9122D;
+  font-weight: bold;
+  text-align: center;
+  font-size: 100px;
+  margin-top: 70px;
+  margin-bottom: 50px;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .calendario-actividades .bandera {
-    width: 100px;
+  width: 100px;
 }
 
 .banderas {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 .banderas p {
-    width: 100px;
+  width: 100px;
 }
 
 .tarjetas {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .tarjeta-calendario {
-    background-color: #3A6B80;
-    width: 800px;
-    margin: 50px;
-    display: inline-block;
-    text-align: -webkit-center;
+  background-color: #3A6B80;
+  width: 800px;
+  margin: 50px;
+  display: inline-block;
+  text-align: -webkit-center;
 }
 
 .tarjeta-calendario .fecha {
-    background-color: #DBAF1F;
-    font-size: 40px;
-    text-align: center;
-    color: white;
-    padding: 5px;
+  background-color: #DBAF1F;
+  font-size: 40px;
+  text-align: center;
+  color: white;
+  padding: 5px;
 }
 
 .tarjeta-calendario p {
-    color: white;
+  color: white;
 }
 
 .tarjeta-calendario .compara-link {
-    background-color: #E9122D;
-    color: white;
-    text-align: center;
-    font-size: 25px;
-    padding-left: 20px;
-    padding-right: 20px;
-    display: block;
-    width: 600px;
-    height: 70px;
-    line-height: 70px;
-    border-radius: 100px;
-    margin-top: 25px;
-    margin-bottom: 25px;
+  background-color: #E9122D;
+  color: white;
+  text-align: center;
+  font-size: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
+  display: block;
+  width: 600px;
+  height: 70px;
+  line-height: 70px;
+  border-radius: 100px;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
 .tarjeta-calendario .compara-text {
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-    width: 700px;
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  width: 700px;
 }
 
 .tarjeta-calendario .descripcion {
-    font-size: 20px;
-    text-align: justify;
-    float: left;
-    width: 50%;
-    margin-left: 50px;
+  font-size: 20px;
+  text-align: justify;
+  float: left;
+  width: 50%;
+  margin-left: 50px;
 }
 
 .info-persona {
-    width: 40%;
-    float: right;
+  width: 40%;
+  float: right;
 }
 
 .tarjeta-calendario .foto {
-    position: relative;
-    width: 200px;
-    border-radius: 100px;
-    z-index: 1;
+  position: relative;
+  width: 200px;
+  border-radius: 100px;
+  z-index: 1;
 }
 
 .tarjeta-calendario .nombre {
-    background-color: #E9122D;
-    color: white;
-    width: 250px;
-    font-size: x-large;
-    padding: 25px 15px 5px;
-    border-radius: 100px;
-    transform: translateY(-25px);
-    z-index: -1;
+  background-color: #E9122D;
+  color: white;
+  width: 250px;
+  font-size: x-large;
+  padding: 25px 15px 5px;
+  border-radius: 100px;
+  transform: translateY(-25px);
+  z-index: -1;
 }
 
 .contact-icons img {
-    width: 70px;
-    margin: 0px 5px 5px;
-    transform: translateY(-20px);
+  width: 70px;
+  margin: 0px 5px 5px;
+  transform: translateY(-20px);
 }
 
 /* - Responsivo - */
 @media screen and (max-width:1300px) {
-    .carrusel {
-        margin-top: 85px;
-    }
+  .carrusel {
+    margin-top: 85px;
+  }
 
-    .texto-carrusel {
-        font-size: 30px;
-    }
+  .texto-carrusel {
+    font-size: 30px;
+  }
 
-    .titulo-calendario {
-        font-size: 80px;
-    }
+  .titulo-calendario {
+    font-size: 80px;
+  }
 }
 
 @media screen and (max-width: 750px) {
-    .titulo-calendario {
-        font-size: 50px;
-    }
+  .titulo-calendario {
+    font-size: 50px;
+  }
 
-    .tarjeta-calendario {
-        width: 500px;
-        margin: 50px;
-    }
+  .tarjeta-calendario {
+    width: 500px;
+    margin: 50px;
+  }
 
-    .tarjeta-calendario .compara-link {
-        width: 400px;
-        font-size: medium;
-    }
+  .tarjeta-calendario .compara-link {
+    width: 400px;
+    font-size: medium;
+  }
 
-    .tarjeta-calendario .compara-text {
-        font-size: 20px;
-        font-weight: bold;
-        width: 400px;
-    }
+  .tarjeta-calendario .compara-text {
+    font-size: 20px;
+    font-weight: bold;
+    width: 400px;
+  }
 
-    .tarjeta-calendario .descripcion {
-        font-size: 15px;
-        margin-left: 40px;
-    }
+  .tarjeta-calendario .descripcion {
+    font-size: 15px;
+    margin-left: 40px;
+  }
 
-    .tarjeta-calendario .foto {
-        width: 100px;
-    }
+  .tarjeta-calendario .foto {
+    width: 100px;
+  }
 
-    .tarjeta-calendario .nombre {
-        width: 150px;
-        font-size: small;
-    }
+  .tarjeta-calendario .nombre {
+    width: 150px;
+    font-size: small;
+  }
 
-    .contact-icons img {
-        width: 30px;
-        transform: translateY(-30px);
-    }
+  .contact-icons img {
+    width: 30px;
+    transform: translateY(-30px);
+  }
 }
 
 @media screen and (max-width: 500px) {
-    .texto-carrusel {
-        font-size: 20px;
-    }
+  .carrusel-content {
+    height: 200px;
+  }
 
-    .tarjeta-calendario .fecha {
-        font-size: 20px;
-    }
+  .texto-carrusel {
+    font-size: 20px;
+  }
 
-    .calendario-actividades .bandera {
-        width: 50px;
-    }
+  .tarjeta-calendario .fecha {
+    font-size: 20px;
+  }
 
-    .titulo-calendario {
-        font-size: 50px;
-    }
+  .calendario-actividades .bandera {
+    width: 50px;
+  }
 
-    .tarjeta-calendario {
-        width: 100% !important;
-        margin-bottom: 50px;
-    }
-    
-    .tarjeta-calendario .compara-link {
-        width: 300px;
-        height: auto;
-        padding: 1px 1px;
-        font-size: smaller;
-    }
+  .titulo-calendario {
+    font-size: 50px;
+  }
 
-    .tarjeta-calendario .compara-text {
-        font-size: 20px;
-        font-weight: 600;
-        width: 300px;
-    }
+  .tarjeta-calendario {
+    width: 100% !important;
+    margin-bottom: 50px;
+  }
 
-    .tarjeta-calendario .descripcion {
-        width: 100%;
-        display: contents;
-        padding: 10px !important;
-    }
+  .tarjeta-calendario .compara-link {
+    width: 300px;
+    height: auto;
+    padding: 1px 1px;
+    font-size: smaller;
+  }
 
-    .info-persona {
-        margin-top: 20px;
-        width: 100%;
-    }
+  .tarjeta-calendario .compara-text {
+    font-size: 20px;
+    font-weight: 600;
+    width: 300px;
+  }
 
-    .tarjeta-calendario .foto {
-        width: 100px;
-    }
+  .tarjeta-calendario .descripcion {
+    width: 100%;
+    display: contents;
+    padding: 10px !important;
+  }
 
-    .tarjeta-calendario .nombre {
-        width: 150px;
-        font-size: small;
-    }
+  .info-persona {
+    margin-top: 20px;
+    width: 100%;
+  }
 
-    .contact-icons img {
-        width: 30px;
-        transform: translateY(-30px);
-    }
+  .tarjeta-calendario .foto {
+    width: 100px;
+  }
+
+  .tarjeta-calendario .nombre {
+    width: 150px;
+    font-size: small;
+  }
+
+  .contact-icons img {
+    width: 30px;
+    transform: translateY(-30px);
+  }
 }
