remplazos de href y alt

--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,56 +1,55 @@
 <div class="div-experience">
-    <div class="experience-pt1">
-        <label class="experience-title" for="">Experiencia de Aprendizaje</label>
-        <ul>
-            <li>
-                <a href="calendario.php" target="_parent"><button id="openCalendar">Calendario</button></a>
-            </li>
-            <li>
-                <a href=""> <button>Conoce el temario</button></a>
-            </li>
-        </ul>
-    </div>
+  <div class="experience-pt1">
+    <label class="experience-title" for="">Experiencia de Aprendizaje</label>
+    <ul>
+      <li>
+        <a routerLink="/calendario"><button id="openCalendar">Calendario</button></a>
+      </li>
+      <li>
+        <a routerLink="/temas"> <button>Conoce el temario</button></a>
+      </li>
+    </ul>
+  </div>
 
-    <div class="experience-pt2">
-        <label class="label-conoce" for="">Conoce lo nuevo</label>
+  <div class="experience-pt2">
+    <label class="label-conoce" for="">Conoce lo nuevo</label>
 
-        <!-- Twitter -->
-        <div class="links-content">
-            <div class="twitter-content">
-                <blockquote class="twitter-tweet">
-                    <p lang="en" dir="ltr">What will it take to restore harmony with nature?<br><br>Maya Gabeira
-                        puts it perfectly 👉 <a
-                            href="https://twitter.com/hashtag/SharingHumanity?src=hash&amp;ref_src=twsrc%5Etfw">#SharingHumanity</a><br><br>By
-                        sharing, we can create solutions to protect biodiversity.<br><br>As <a
-                            href="https://twitter.com/hashtag/COP15?src=hash&amp;ref_src=twsrc%5Etfw">#COP15</a> is
-                        underway, it’s time to have your say <a
-                            href="https://twitter.com/hashtag/ForNature?src=hash&amp;ref_src=twsrc%5Etfw">#ForNature</a>
-                        💬 👇 <a href="https://t.co/Ly7WFt5rXf">pic.twitter.com/Ly7WFt5rXf</a></p>&mdash; UNESCO 🏛️
-                    #Education #Sciences #Culture 🇺🇳 (UNESCO) <a
-                        href="https://twitter.com/UNESCO/status/1600128174066610176?ref_src=twsrc%5Etfw">December 6,
-                        2022</a>
-                </blockquote>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </div>
-            <div class="twitter-content">
-                <blockquote class="twitter-tweet">
-                    <p lang="en" dir="ltr">A powerful message for <a
-                            href="https://twitter.com/hashtag/COP15?src=hash&amp;ref_src=twsrc%5Etfw">#COP15</a>
-                        from our newest Goodwill Ambassador, <a
-                            href="https://twitter.com/maurocolagreco?ref_src=twsrc%5Etfw">maurocolagreco</a>!
-                        ✊<br><br>Hear his wise words about the importance of reconciling with nature and preserving
-                        our <a
-                            href="https://twitter.com/hashtag/biodiversity?src=hash&amp;ref_src=twsrc%5Etfw">#biodiversity</a>
-                        through nutrition and gastronomy 🥗👇 <a
-                            href="https://t.co/uBRC3R32pS">pic.twitter.com/uBRC3R32pS</a></p>&mdash; UNESCO 🏛️
-                    #Education #Sciences #Culture 🇺🇳 (UNESCO) <a
-                        href="https://twitter.com/UNESCO/status/1603434718111928322?ref_src=twsrc%5Etfw">December
-                        15, 2022</a>
-                </blockquote>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </div>
-
-        </div>
+    <!-- Twitter -->
+    <div class="links-content">
+      <div class="twitter-content">
+        <blockquote class="twitter-tweet">
+          <p lang="en" dir="ltr">What will it take to restore harmony with nature?<br><br>Maya Gabeira
+            puts it perfectly 👉 <a
+              href="https://twitter.com/hashtag/SharingHumanity?src=hash&amp;ref_src=twsrc%5Etfw">#SharingHumanity</a><br><br>By
+            sharing, we can create solutions to protect biodiversity.<br><br>As <a
+              href="https://twitter.com/hashtag/COP15?src=hash&amp;ref_src=twsrc%5Etfw">#COP15</a> is
+            underway, it’s time to have your say <a
+              href="https://twitter.com/hashtag/ForNature?src=hash&amp;ref_src=twsrc%5Etfw">#ForNature</a>
+            💬 👇 <a href="https://t.co/Ly7WFt5rXf">pic.twitter.com/Ly7WFt5rXf</a></p>&mdash; UNESCO 🏛️
+          #Education #Sciences #Culture 🇺🇳 (UNESCO) <a
+            href="https://twitter.com/UNESCO/status/1600128174066610176?ref_src=twsrc%5Etfw">December 6,
+            2022</a>
+        </blockquote>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
+      <div class="twitter-content">
+        <blockquote class="twitter-tweet">
+          <p lang="en" dir="ltr">A powerful message for <a
+              href="https://twitter.com/hashtag/COP15?src=hash&amp;ref_src=twsrc%5Etfw">#COP15</a>
+            from our newest Goodwill Ambassador, <a
+              href="https://twitter.com/maurocolagreco?ref_src=twsrc%5Etfw">maurocolagreco</a>!
+            ✊<br><br>Hear his wise words about the importance of reconciling with nature and preserving
+            our <a href="https://twitter.com/hashtag/biodiversity?src=hash&amp;ref_src=twsrc%5Etfw">#biodiversity</a>
+            through nutrition and gastronomy 🥗👇 <a href="https://t.co/uBRC3R32pS">pic.twitter.com/uBRC3R32pS</a></p>
+          &mdash; UNESCO 🏛️
+          #Education #Sciences #Culture 🇺🇳 (UNESCO) <a
+            href="https://twitter.com/UNESCO/status/1603434718111928322?ref_src=twsrc%5Etfw">December
+            15, 2022</a>
+        </blockquote>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
 
     </div>
+
+  </div>
 </div>
