--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,11 +1,11 @@
 <footer>
   <section class="navbar-footer">
-    <a class="btn-contact" href="">
+    <a class="btn-contact" routerLink="/">
       <i class="fa fa-commenting me-2" aria-hidden="true"></i>
       ¡Hola!
     </a>
 
-    <a href="">
+    <a routerLink="/">
       <img class="img-footer" src="assets/img/imageFooter.png" alt="">
     </a>
 
