--- a/src/app/pages/calendario/calendario.component.html
+++ b/src/app/pages/calendario/calendario.component.html
@@ -5,19 +5,19 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <div class="carrusel-content">
-          <img src="assets/calendario/carrusel.webp" class="d-block w-100" alt="...">
+          <img src="assets/calendario/carrusel.webp" class="d-block w-100" alt="foto-carrusel">
           <h2 class="texto-carrusel">Conoce las próximas actividades</h2>
         </div>
       </div>
       <div class="carousel-item">
         <div class="carrusel-content">
-          <img src="assets/calendario/carrusel.webp" class="d-block w-100" alt="...">
+          <img src="assets/calendario/carrusel.webp" class="d-block w-100" alt="foto-carrusel">
           <h2 class="texto-carrusel">Conoce las próximas actividades</h2>
         </div>
       </div>
       <div class="carousel-item">
         <div class="carrusel-content">
-          <img src="assets/calendario/carrusel.webp" class="d-block w-100" alt="...">
+          <img src="assets/calendario/carrusel.webp" class="d-block w-100" alt="foto-carrusel">
           <h2 class="texto-carrusel">Conoce las próximas actividades</h2>
         </div>
       </div>
@@ -43,23 +43,23 @@
 
         <div class="banderas">
           <div>
-            <img class="bandera" src="assets/calendario/bandera1.png" alt="">
+            <img class="bandera" src="assets/calendario/bandera1.png" alt="bandera">
             <P>Monterrey 10:00 a.m.</P>
           </div>
           <div>
-            <img class="bandera" src="assets/calendario/bandera2.png" alt="">
+            <img class="bandera" src="assets/calendario/bandera2.png" alt="bandera">
             <P>Perth 11:00 p.m.</P>
           </div>
           <div>
-            <img class="bandera" src="assets/calendario/bandera3.png" alt="">
+            <img class="bandera" src="assets/calendario/bandera3.png" alt="bandera">
             <P>Alberta 9:00 a.m.</P>
           </div>
           <div>
-            <img class="bandera" src="assets/calendario/bandera4.png" alt="">
+            <img class="bandera" src="assets/calendario/bandera4.png" alt="bandera">
             <P>Salamanca 5:00 p.m.</P>
           </div>
           <div>
-            <img class="bandera" src="assets/calendario/bandera5.png" alt="">
+            <img class="bandera" src="assets/calendario/bandera5.png" alt="bandera">
             <P>Paris 5:00 p.m.</P>
           </div>
         </div>
@@ -73,7 +73,7 @@
             </p>
           </div>
           <div class="info-persona">
-            <img class="foto" src={{exp.imagen}} alt="">
+            <img class="foto" src={{exp.imagen}} alt="foto">
             <p class="nombre">{{exp.nombre}}</p>
             <div class="contact-icons">
               <a routerLink="/">
