--- a/src/app/pages/conocenos/conocenos.component.html
+++ b/src/app/pages/conocenos/conocenos.component.html
@@ -2,12 +2,12 @@
 
 <main>
   <div class="banner-content">
-    <img src="assets/conocenos/banner.webp" class="d-block w-100" alt="...">
+    <img src="assets/conocenos/banner.webp" class="d-block w-100" alt="banner">
     <h2 class="texto-banner">NUESTRO EQUIPO</h2>
   </div>
   <div class="contenedor-titulo">
     <div class="imagen">
-      <img src="assets/conocenos/imagen.webp" alt="" srcset="">
+      <img src="assets/conocenos/imagen.webp" alt="imagen">
     </div>
     <div>
       <h3 class="titulos">Investigadores</h3>
@@ -37,7 +37,7 @@
 
   <div class="contenedor-titulo">
     <div class="imagen">
-      <img src="assets/conocenos/imagen.webp" alt="" srcset="">
+      <img src="assets/conocenos/imagen.webp" alt="imagen">
     </div>
     <div>
       <h3 class="titulos">Organizadores del proyecto</h3>
