--- a/src/app/pages/publicaciones/publicaciones.component.html
+++ b/src/app/pages/publicaciones/publicaciones.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <div class="banner-content">
-  <img src="assets/publicaciones/banner.webp" class="d-block w-100" alt="...">
+  <img src="assets/publicaciones/banner.webp" class="d-block w-100" alt="banner">
   <h2 class="texto-banner">RECURSOS</h2>
 </div>
 <section class="container">
