--- a/src/app/pages/sobre-educa/sobre-educa.component.html
+++ b/src/app/pages/sobre-educa/sobre-educa.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <div class="banner-content">
-    <img src="assets/sobre-educa/banner.webp" class="d-block w-100" alt="...">
+    <img src="assets/sobre-educa/banner.webp" class="d-block w-100" alt="banner">
     <h2 class="texto-banner">CONTENIDO</h2>
 </div>
 <div>
@@ -12,7 +12,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita dignissimos perferendis voluptates adipisci
             sequi esse laborum eos debitis voluptatem! Consequatur perspiciatis magnam hic blanditiis accusamus adipisci
             earum nesciunt voluptatem minus?</p>
-        <img src="assets/sobre-educa/imagen.webp" alt="">
+        <img src="assets/sobre-educa/imagen.webp" alt="imagen">
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae magni aliquid vero sed. Esse officia
             impedit optio illo aliquid, delectus incidunt magni voluptatibus praesentium, laudantium est nihil
             voluptates
