--- a/src/app/pages/temas/temas.component.html
+++ b/src/app/pages/temas/temas.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 
 <div class="banner-content">
-    <img src="assets/temas/1.png" class="d-block w-100" alt="...">
+    <img src="assets/temas/1.png" class="d-block w-100" alt="banner">
     <h2 class="texto-banner">CONTENIDO</h2>
 </div>
 
