--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,7 +11,7 @@
       <label class="label-input" for="">Por tema</label>
       <div class="input-content">
         <input type="text" placeholder="Escribe aqui...">
-        <a class="input-icon" href="" target="">
+        <a class="input-icon" routerLink="/" target="">
           <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
             <circle cx="15" cy="15" r="15" fill="#DBDCDC" />
             <path
@@ -24,7 +24,7 @@
       <label class="label-input" for="">Por título</label>
       <div class="input-content">
         <input type="text" placeholder="Escribe aqui...">
-        <a class="input-icon" href="" target="">
+        <a class="input-icon" routerLink="/" target="">
           <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
             <circle cx="15" cy="15" r="15" fill="#DBDCDC" />
             <path
@@ -59,21 +59,25 @@
 <!-- Experiencia -->
 <!--  <iframe class="iframe-experience div-experience" src="../../components/experiencia/experiencia.component.html"
         frameborder="0"></iframe> -->
+<app-experiencia></app-experiencia>
 
 <div class="div-card-2">
   <div class="card-2-seccion-1">
     <div class="avances-img">
       <a routerLink="/">
-        <img src="assets\svg\3.svg" alt="">
+        <img src="assets\svg\3.svg" alt="mis_avances">
       </a>
     </div>
     <a routerLink="/">
       <h1>Mis avances</h1>
     </a>
-    <img class="barra-progreso" src="assets\svg\5.svg" alt="">
-    <div class="avances-img">
+    <div class="progress col-5 m-auto">
+      <div class="progress-bar bg-info" style="width: 75%" role="progressbar" aria-valuenow="25" aria-valuemin="0"
+        aria-valuemax="100">75%</div>
+    </div>
+    <div class="avances-img mt-5">
       <a routerLink="/">
-        <img width="200px" src="assets\svg\4.svg" alt="">
+        <img width="200px" src="assets\svg\4.svg" alt="foros_debate">
       </a>
     </div>
     <a routerLink="/">
@@ -84,25 +88,25 @@
   <div class="card-2-seccion-2">
     <div class="titulos">
       <h1 class="recursos-label">Mis recursos</h1>
-      <img class="flecha" src="assets/svg/6.svg" alt="">
+      <img class="flecha" src="assets/svg/6.svg" alt="Flecha">
     </div>
     <div class="recursos-content">
 
       <div>
         <div class="recursos-img">
-          <img src="assets/svg/7.svg" alt="">
+          <img src="assets/svg/7.svg" alt="Libros digitales">
         </div>
         <p>Libros digitales</p>
       </div>
       <div>
         <div class="recursos-img">
-          <img src="assets/svg/8.svg" alt="">
+          <img src="assets/svg/8.svg" alt="Lecciones grabadas">
         </div>
         <p>Lecciones grabadas</p>
       </div>
       <div>
         <div class="recursos-img">
-          <img src="assets/svg/9.svg" alt="">
+          <img src="assets/svg/9.svg" alt="Revistas cientificas">
         </div>
         <p>Revistas cientificas</p>
       </div>
@@ -114,31 +118,31 @@
 
 <div class="div-card-3">
   <div class="titulos">
-    <img src="assets/svg/10.svg" alt="">
+    <img src="assets/svg/10.svg" alt="libro">
     <h1 class="label-actividades">Próximas actividades</h1>
   </div>
   <div>
     <div class="actividades-content">
 
       <div class="contenido-actividades">
-        <img src="assets/svg/11.svg" alt="">
+        <img src="assets/svg/11.svg" alt="libro">
         <h2>Lección 2:</h2>
         <p>"Los beneficios de la Ciencia Abierta"</p>
-        <a href="">Iniciar lección</a>
+        <a routerLink="/">Iniciar lección</a>
       </div>
 
       <div class="contenido-actividades">
-        <img src="assets/svg/11.svg" alt="">
+        <img src="assets/svg/11.svg" alt="libro">
         <h2>Lección 3:</h2>
         <p>"Buenas prácticas para publicación"</p>
-        <a href="">Iniciar lección</a>
+        <a routerLink="/">Iniciar lección</a>
       </div>
 
       <div class="contenido-actividades">
         <img src="assets/svg/11.svg" alt="">
         <h2>Lección 4:</h2>
         <p>"Inclusion en la Ciencia"</p>
-        <a href="">Iniciar lección</a>
+        <a routerLink="/">Iniciar lección</a>
       </div>
 
     </div>
