--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -26,11 +26,10 @@
             underway, it’s time to have your say <a
               href="https://twitter.com/hashtag/ForNature?src=hash&amp;ref_src=twsrc%5Etfw">#ForNature</a>
             💬 👇 <a href="https://t.co/Ly7WFt5rXf">pic.twitter.com/Ly7WFt5rXf</a></p>&mdash; UNESCO 🏛️
-          #Education #Sciences #Culture 🇺🇳 (UNESCO) <a
+          #Education #Sciences #Culture 🇺🇳 (&#64;UNESCO) <a
             href="https://twitter.com/UNESCO/status/1600128174066610176?ref_src=twsrc%5Etfw">December 6,
             2022</a>
         </blockquote>
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
       <div class="twitter-content">
         <blockquote class="twitter-tweet">
@@ -42,11 +41,10 @@
             our <a href="https://twitter.com/hashtag/biodiversity?src=hash&amp;ref_src=twsrc%5Etfw">#biodiversity</a>
             through nutrition and gastronomy 🥗👇 <a href="https://t.co/uBRC3R32pS">pic.twitter.com/uBRC3R32pS</a></p>
           &mdash; UNESCO 🏛️
-          #Education #Sciences #Culture 🇺🇳 (UNESCO) <a
+          #Education #Sciences #Culture 🇺🇳 (&#64;UNESCO) <a
             href="https://twitter.com/UNESCO/status/1603434718111928322?ref_src=twsrc%5Etfw">December
             15, 2022</a>
         </blockquote>
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
 
     </div>
