--- a/src/app/pages/publicaciones/publicaciones.component.html
+++ b/src/app/pages/publicaciones/publicaciones.component.html
@@ -22,7 +22,7 @@
 </section>
 <div class="flecha-img">
   <a routerLink="/">
-    <img src="assets/publicaciones/flecha.webp" alt="flecha" width="70">
+    <img src="assets/img/flecha.webp" alt="flecha" width="70">
   </a>
 </div>
 <app-footer></app-footer>
