--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@500&display=swap');
-
 body {
   margin: 0px;
   font-family: 'Be Vietnam Pro', sans-serif;
@@ -11,7 +9,7 @@ body {
 }
 
 .div-project {
-  background-image: url("../../../../public/assets/img/fondo1.webp");
+  background-image: url("/assets/home/fondo1.webp");
   background-repeat: no-repeat;
   background-size: cover;
   border-right: #3A6B80 solid 5px;
@@ -24,25 +22,7 @@ body {
   align-items: center;
 }
 
-.iframe-experience {
-  width: 55%;
-  float: right;
-  margin-top: 120px;
-  height: 550px;
-}
 
-.experience-pt1 {
-  background-image: url("../../../../public/assets/img/img5.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 50%;
-  padding-bottom: 50px;
-}
-
-.experience-pt2 {
-  margin: 10px;
-  height: max-content;
-}
 
 
 /*Buscar proyecto*/
@@ -183,68 +163,6 @@ input:checked+.slider:before {
 }
 
 
-/*Experiencia*/
-.experience-title {
-  color: white;
-  font-size: 60px;
-  font-weight: bold;
-  margin: 40px;
-  text-shadow: 2px 2px #c4c4c4;
-}
-
-.div-experience ul {
-  max-width: max-content;
-}
-
-.div-experience ul li {
-  display: block;
-  padding: 5px;
-  max-width: max-content;
-}
-
-.div-experience button {
-  background-color: #E9122D;
-  color: white;
-  font-size: 20px;
-  text-align: center;
-  border-radius: 25px;
-  border: none;
-  outline: none;
-  width: 200px;
-  padding: 5px;
-}
-
-.div-experience button:hover,
-.btn-aceptar button:hover {
-  background-color: #e74359;
-  cursor: pointer;
-}
-
-.modal-container {
-  visibility: hidden;
-  position: fixed;
-}
-
-
-/*Conoce lo nuevo*/
-.label-conoce {
-  font-size: 30px;
-  font-weight: bold;
-  text-align: center;
-  color: white;
-  background-color: #149FDA;
-  border-radius: 30PX;
-  width: 70%;
-  transform: translateY(-70%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.twitter-content {
-  display: flex;
-  justify-content: center;
-}
 
 
 /*Recursos*/
@@ -294,7 +212,7 @@ input:checked+.slider:before {
 }
 
 .card-2-seccion-2 {
-  background-image: url("../../../../public/assets/img/fondo2.webp");
+  background-image: url("/assets/home/fondo2.webp");
   width: 70%;
   border-top: #DBAF1F solid 30px;
   border-bottom: #DBAF1F solid 30px;
@@ -541,7 +459,7 @@ input:checked+.slider:before {
   }
 
   .card-2-seccion-2 {
-    background-image: url("../../../../public/assets/img/fondo2.webp");
+    background-image: url("/assets/home/fondo2.webp");
     float: right;
     width: 100%;
     height: max-content;
