--- a/src/app/pages/publicaciones/publicaciones.component.css
+++ b/src/app/pages/publicaciones/publicaciones.component.css
@@ -10,7 +10,7 @@
   width: max-content;
   padding: 20px;
   margin: 10px;
-  background-image: url('/assets/img/logo.webp');
+  background-image: url('/assets/publicaciones/logo.webp');
   background-size: cover;
   background-position: center;
 }
