unete y participa contenido agregado

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,7 +6,7 @@
     </a>
 
     <a routerLink="/">
-      <img class="img-footer" src="assets/img/imageFooter.png" alt="footer">
+      <img class="img-footer" src="assets/img/imageFooter.webp" alt="footer">
     </a>
 
     <div>
