--- a/src/app/pages/unete-y-participa/unete-y-participa.component.html
+++ b/src/app/pages/unete-y-participa/unete-y-participa.component.html
@@ -2,9 +2,140 @@
 
 
 <div class="banner-content">
-    <img src="assets/unete-y-participa/5.png" class="d-block w-100" alt="...">
-    <h2 class="texto-banner">ÚNETE Y PARTICIPA</h2>
+  <img src="assets/unete-y-participa/banner.webp" class="d-block w-100" alt="...">
+  <h2 class="texto-banner">ÚNETE Y PARTICIPA</h2>
 </div>
 
+<section>
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
+        aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/">Preprints</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/">OMP</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/">Datos Abiertos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/">Revistas Cientificas</a>
+          </li>
+        </ul>
+      </div>
+      <!--       <form class="d-flex fixed" role="search">
+        <input class="barra-busqueda me-2 ps-3" type="search" placeholder="Busca en foros, temas y más..."
+          aria-label="Search">
+        <a class="search-icon me-4" routerLink="/">
+          <svg width="50" height="50" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="15" cy="15" r="15" fill="#DBDCDC" />
+            <path
+              d="M24.5729 23.0938L21.0312 19.5625C22.1739 18.1067 22.7939 16.309 22.7916 14.4583C22.7916 12.8102 22.3029 11.199 21.3872 9.82859C20.4715 8.45818 19.17 7.39007 17.6473 6.75934C16.1246 6.12861 14.449 5.96358 12.8325 6.28513C11.216 6.60667 9.73116 7.40034 8.56572 8.56578C7.40028 9.73122 6.60661 11.2161 6.28507 12.8326C5.96352 14.4491 6.12855 16.1246 6.75928 17.6474C7.39001 19.1701 8.45811 20.4716 9.82852 21.3873C11.1989 22.3029 12.8101 22.7917 14.4583 22.7917C16.309 22.794 18.1067 22.1739 19.5624 21.0313L23.0937 24.5729C23.1905 24.6706 23.3057 24.7481 23.4327 24.8009C23.5596 24.8538 23.6958 24.881 23.8333 24.881C23.9708 24.881 24.1069 24.8538 24.2339 24.8009C24.3608 24.7481 24.476 24.6706 24.5729 24.5729C24.6705 24.4761 24.748 24.3609 24.8009 24.2339C24.8538 24.107 24.881 23.9709 24.881 23.8333C24.881 23.6958 24.8538 23.5597 24.8009 23.4327C24.748 23.3058 24.6705 23.1906 24.5729 23.0938V23.0938ZM8.20828 14.4583C8.20828 13.2222 8.57483 12.0138 9.26159 10.986C9.94835 9.95822 10.9245 9.15714 12.0665 8.68409C13.2085 8.21104 14.4652 8.08727 15.6776 8.32843C16.89 8.56959 18.0036 9.16484 18.8777 10.0389C19.7518 10.913 20.347 12.0266 20.5882 13.239C20.8293 14.4514 20.7056 15.7081 20.2325 16.8501C19.7595 17.9921 18.9584 18.9683 17.9306 19.655C16.9028 20.3418 15.6944 20.7083 14.4583 20.7083C12.8007 20.7083 11.211 20.0499 10.0389 18.8778C8.86676 17.7057 8.20828 16.1159 8.20828 14.4583Z"
+              fill="#3A6B80" />
+          </svg>
+        </a>
+      </form> -->
+      <a class="navbar-brand" routerLink="/">
+        <img src="assets/unete-y-participa/chat.webp" alt="mensaje" width="50">
+      </a>
+    </div>
+  </nav>
+</section>
+
+<section class="container">
+
+  <div class="container-titulo">
+    <img src="assets/unete-y-participa/hojas.webp" alt="icono" width="150">
+    <h1>Foro: PREPRINTS</h1>
+  </div>
+
+  <div class="add-comentario">
+    <img src="assets/unete-y-participa/mensaje1.webp" alt="añadir_comentario" width="50">
+    <p>Añadir comentario</p>
+  </div>
+
+  <div class="comentarios">
+
+    <div class="comentario-principal">
+      <div class="d-flex">
+        <div class="img-usuario">
+          <img src="assets/unete-y-participa/usuario1.webp" alt="usuario" width="200">
+        </div>
+        <div class="info-usuario">
+          <h2>Daniela Ordoñez</h2>
+          <p>14:15 (hace 3 horas) 3 comentarios</p>
+        </div>
+      </div>
+      <div class="comentario-usuario">
+        <p>¡Hola comunidad!<br>
+          Me encuentro realizando el curso de preprints y me gustaría saber más sobre el tema de Plugins. ¿Alguien
+          podría completamentarme sobre el tema?<br>
+          Muchas gracias.
+        </p>
+      </div>
+      <div class="add-comentario ms-3">
+        <img src="assets/unete-y-participa/mensaje2.webp" alt="añadir_comentario" width="35">
+        <p>Responder</p>
+      </div>
+    </div>
+
+    <div class="d-flex">
+      <div class="flecha-comentario">
+        <img src="assets/unete-y-participa/flecha.webp" alt="flecha" width="50" height="70">
+      </div>
+      <div class="comentario-respuesta">
+        <div class="d-flex">
+          <div class="img-usuario">
+            <img src="assets/unete-y-participa/usuario2.webp" alt="usuario" width="200">
+          </div>
+          <div class="info-usuario">
+            <h2>Kiara Steves</h2>
+            <p>15:24 (hace 3 horas)</p>
+          </div>
+        </div>
+        <div class="comentario-usuario">
+          <p>¡Hola Daniela!<br>
+            Yo encontré este artículo que habla más sobre el tema y te será de ayuda, te dejo el link:
+            https://www.ionos.mx/digitalguide/que-es-un-plugin/.
+          </p>
+        </div>
+        <div class="add-comentario ms-3">
+          <img src="assets/unete-y-participa/mensaje2.webp" alt="añadir_comentario" width="35">
+          <p>Responder</p>
+        </div>
+      </div>
+    </div>
+    <p class="etiqueta">Más respuestas ...</p>
+
+    <div class="comentario-principal">
+      <div class="d-flex">
+        <div class="img-usuario">
+          <img src="assets/unete-y-participa/usuario3.webp" alt="usuario" width="200">
+        </div>
+        <div class="info-usuario">
+          <h2>Lucía Cervantes</h2>
+          <p>17:25 (hace 5 horas) 2 comentarios</p>
+        </div>
+      </div>
+      <div class="comentario-usuario">
+        <p>¡Hola comunidad!</p>
+      </div>
+      <div class="flecha-img">
+        <a routerLink="/">
+          <img src="assets/img/flecha.webp" alt="flecha" width="50">
+        </a>
+      </div>
+    </div>
+
+  </div>
+
+</section>
 
 <app-footer></app-footer>
